--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 
-<title>YZ's Profolio</title>
+<title>My Profolio</title>
 </head>
 
 <body>
   <div id="root"></div>
 </body>
 
-</html>
+</html
